--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-  "dev": "vite --open-ssl-legacy-provider",
-  "build": "vite build --open-ssl-legacy-provider",
+  "dev": "vite ",
+  "build": "vite build ",
   "lint": "eslint .",
   "preview": "vite preview"
 },
