--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": " node backend/server.js",
     "server":"nodemon backend/server.js",
-  "build": "npm install --legacy-peer-deps && npm install --legacy-peer-deps --prefix Frontend && npm --prefix Frontend run build"
+  "build": "npm install  && npm install  --prefix Frontend && npm --prefix Frontend run build"
   },
   "author": "Hanzala Arshad",
   "license": "ISC",
